# anyhttp

./: .gitignore  Cargo.toml  LICENSE.md  README.md
crates/anyhttp_reqwest/: Cargo.toml  README.md
crates/anyhttp_reqwest/src/: lib.rs
examples/: example.rs  mock_example.rs
src/: lib.rs  main.rs  mock.rs  reqwest.rs  response.rs
src/adapters/: mod.rs  reqwest.rs
