[package]
name = "anyhttp"
version = "0.0.0"
edition = "2024"

[dependencies]
http = "1.3.1"
async-trait = "0.1.89"
url = "2.5.7"
bytes = "1.11.0"
futures = "0.3.31"
anyhow = "1.0.100"

[dev-dependencies]
anyhttp_reqwest = { git = "https://github.com/quaero-search/anyhttp" }
# Local development.
# anyhttp_reqwest = { path = "crates/anyhttp_reqwest" }

reqwest = { version = "0.12.24" }
tokio = { version = "1.48.0", features = ["full"] }

[features]
stream = ["reqwest/stream"]
default_features = ["stream"]
